[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "async-task-engine"
requires-python = ">=3.13"
dependencies = [
    "fastapi",
    "uvicorn",
    "psycopg[binary,pool]",
    "prometheus-client",
    "httpx",
    "pydantic",
    "python-dotenv"
]
dev-dependencies = [
    "pytest",
    "pytest-asyncio",
    "ruff"
]
